add api: imgDetail
